--- a/src/_components/header/Header.module.css
+++ b/src/_components/header/Header.module.css
@@ -1,4 +1,34 @@
 .header {
   width: 100%;
-  height: 120px;
+  height: 80px;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header_logo {
+  width: 40px;
+  height: 40px;
+  background: black;
+}
+.header_user {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 1rem;
+}
+
+.header_user_avatar {
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.header_user_avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.header_user_name {
 }
