--- a/src/_components/header/Header.module.css
+++ b/src/_components/header/Header.module.css
@@ -5,17 +5,29 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid #e0e0e0;
 }
 .header_logo {
   width: 40px;
   height: 40px;
   background: black;
 }
+.header_aside {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 1rem;
+  height: 100%;
+}
+
 .header_user {
   display: flex;
   align-items: center;
   justify-content: left;
   gap: 1rem;
+  border-left: 1px solid #e0e0e0;
+  height: 100%;
+  padding-left: 1rem;
 }
 
 .header_user_avatar {
