--- a/src/_components/gallery/image/GalleryImage.module.css
+++ b/src/_components/gallery/image/GalleryImage.module.css
@@ -1,75 +1,134 @@
 .gallery_item {
-  width: 100%;
-  position: relative;
-  display: block;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.gallery_image {
-  width: 100%;
-  height: auto;
-  display: block;
-  object-fit: cover;
-}
-
-.gallery_image_container:hover .gallery_overlay {
-  opacity: 1;
-}
-.image_tags {
-  margin-top: 0.5rem;
-  display: flex;
-  gap: 0.5rem;
-  flex-wrap: wrap;
-}
-.image_tag {
-  padding: 0.25rem 0.5rem;
-  background-color: rgba(0, 0, 0, 0.1);
-  border-radius: 1rem;
-  font-size: 1rem;
+    width: 100%;
+    position: relative;
+    display: block;
+    overflow: hidden;
+    cursor: pointer;
+    background: #ececec;
 }
 
 .gallery_image_container {
-  position: relative;
-  width: 100%;
+    position: relative;
+    padding-bottom: calc(100% / var(--aspect-ratio));
+    width: 100%;
 }
+
+.gallery_image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.gallery_image_container:hover .gallery_overlay {
+    opacity: 1;
+}
+
+.image_tags {
+    margin-top: 0.5rem;
+    display: flex;
+    gap: 0.5rem;
+    flex-wrap: wrap;
+}
+
+.image_tag {
+    padding: 0.25rem 0.5rem;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 1rem;
+    font-size: 1rem;
+}
+
+.gallery_image_container {
+    position: relative;
+    width: 100%;
+}
+
+
 /* Overlay */
+
+.gallery_image_container:hover .gallery_overlay .overlay_row_container {
+    top: 0px;
+}
+
 .gallery_overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: end;
-  align-items: center;
-  opacity: 0;
-  transition: opacity 0.3s;
-  display: flex;
-  flex-direction: column;
-  padding: 0.5rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
 }
+
+.overlay_header {
+    position: absolute;
+    top: 0.5rem;
+    width: calc(100% - 1rem);
+    display: flex;
+}
+
 .overlay_row {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  gap: 0.5rem;
-  width: 100%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 0.5rem;
+    width: 100%;
 }
+
 .overlay_row p {
-  color: white;
-  font-size: 1rem;
+    color: white;
+    font-size: 0.8rem;
 }
-.overlay_row:first-child {
-  margin-bottom: 0.5rem;
-}
+
 .avatar {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    width: 30px;
+    height: 30px;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border: 1px solid white;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.avatar img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.heart_icon_btn {
+    cursor: pointer;
+    background: transparent;
+    outline: none;
+    border: 0;
+    transition: 0.2s;
+}
+
+.heart_icon_btn:hover {
+    transform: scale(1.2);
+}
+
+.image_title {
+    text-overflow: ellipsis;
+    width: 100%;
+}
+
+.overlay_row_container {
+    width: 100%;
+    position: relative;
+    transition-dealy: 0.2s;
+    transition: 0.2s;
+    top: 100px;
 }
