--- a/src/_components/header/Header.module.css
+++ b/src/_components/header/Header.module.css
@@ -1,46 +1,92 @@
 .header {
-  width: 100%;
-  height: 80px;
-  padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #e0e0e0;
+    width: 100%;
+    height: 80px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #e0e0e0;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    background: white;
+    box-sizing: border-box;
 }
+
 .header_logo {
-  width: 40px;
-  height: 40px;
-  background: black;
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
 }
+
+.header_logo img {
+    height: 100%;
+}
+
 .header_aside {
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  gap: 1rem;
-  height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    gap: 1rem;
+    height: 100%;
 }
 
 .header_user {
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  gap: 1rem;
-  border-left: 1px solid #e0e0e0;
-  height: 100%;
-  padding-left: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    gap: 1rem;
+    border-left: 1px solid #e0e0e0;
+    height: 100%;
+    padding-left: 1rem;
 }
 
 .header_user_avatar {
-  width: 40px;
-  height: 40px;
-  border: 1px solid black;
-  border-radius: 50%;
-  overflow: hidden;
+    width: 40px;
+    height: 40px;
+    border: 1px solid black;
+    border-radius: 50%;
+    overflow: hidden;
 }
+
 .header_user_avatar img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-.header_user_name {
+
+.header_user_name {}
+
+
+/* HEADRE CONTEXT MENU */
+
+.headerContextMenu {
+    position: absolute;
+    top: calc(80px + 1rem);
+    right: 1rem;
+    width: 200px;
+    background: white;
+    border: 1px solid #e0e0e0;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    padding: 0.5rem;
+}
+
+.headerContextMenu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 0.5rem;
+    flex-direction: column;
+}
+
+.headerContextMenu ul li {
+    width: 100%;
+}
+
+.headerContextMenu ul li button {
+    width: 100%;
+    text-align: left;
+    justify-content: flex-start;
 }
